--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="main">#9fd7fb</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="lightYellow">#FFFF66</color>
 </resources>
