--- a/app/src/main/res/layout/spinner_layout.xml
+++ b/app/src/main/res/layout/spinner_layout.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textColor="@color/lightYellow"
+    android:textColor="@color/black"
     android:textSize="20sp"
-    android:background="@color/main"
+    android:background="@color/lightYellow"
     />
