--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="main">#9fd7fb</color>
     <color name="colorWhite">#ffffff</color>
     <color name="lightYellow">#FFFF66</color>
+    <color name="black">#000000</color>
 </resources>
