--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="gapSize">30dp</dimen>
+    <dimen name="textSizeMod">20dp</dimen>
+    <dimen name="default_gap">8dip</dimen>
 </resources>
