--- a/app/src/main/res/layout/spinner_layout.xml
+++ b/app/src/main/res/layout/spinner_layout.xml
@@ -5,5 +5,6 @@
     android:layout_height="wrap_content"
     android:textColor="@color/black"
     android:textSize="20sp"
-    android:background="@color/lightYellow"
+    android:paddingLeft="@dimen/default_gap"
+    android:background="#DCDCDC"
     />
