--- a/app/src/main/res/layout/activity_developer_details.xml
+++ b/app/src/main/res/layout/activity_developer_details.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DeveloperDetails">
+    tools:context=".DeveloperDetails"
+    android:background="@color/ash">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
