--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorWhite">#ffffff</color>
     <color name="lightYellow">#FFFF66</color>
     <color name="black">#000000</color>
+    <color name="ash">#b2beb5</color>
 </resources>
